feat: added avatar upload and crud category and specification
