# src/modules/cars/useCases/createSpecification/CreateSpecificationController.ts
@@ -1,13 +1,14 @@
+import { container } from 'tsyringe';
 import { Request, Response } from 'express';
 import { CreateSpecificationUseCase } from './CreateSpecificationUseCase';
 
 class CreateSpecificationController {
-  constructor(private createSpecificationUseCase: CreateSpecificationUseCase) {}
-
-  handle(request: Request, response: Response): Response {
+  async handle(request: Request, response: Response): Promise<Response> {
     const { name, description } = request.body;
 
-    const specification = this.createSpecificationUseCase.execute({
+    const createSpecificationUseCase = container.resolve(CreateSpecificationUseCase);
+
+    const specification = await createSpecificationUseCase.execute({
       name,
       description,
     });
